--- a/src/Views/layouts/partial/footer.twig
+++ b/src/Views/layouts/partial/footer.twig
@@ -19,7 +19,7 @@
                     <h3 class="footer-heading">Navegação</h3>
                     <ul class="navigation-list">
                         <li><a href="/about" class="nav-link">Sobre Nós</a></li>
-                        <li><a href="/curso" class="nav-link">Cursos</a></li>
+                        <li><a href="/courses" class="nav-link">Cursos</a></li>
                         <li><a href="/faq" class="nav-link">FAQ</a></li>
                     </ul>
                 </div>
@@ -64,7 +64,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://instagram.com/discursivamente" aria-label="Instagram" class="social-link">
+                            <a href="https://instagram.com/discursivamente_" aria-label="Instagram" class="social-link">
                                 <i data-feather="instagram"></i>
                             </a>
                         </li>
