--- a/src/Views/layouts/partial/header.twig
+++ b/src/Views/layouts/partial/header.twig
@@ -55,7 +55,7 @@
                             { href: '/teacher/courses', text: 'Gerenciar Cursos' }
                           ]
                         : [
-                            { href: '/dashboard/aluno', text: 'Painel do Aluno' },
+                            { href: '/my-courses', text: 'Meus Cursos' },
                             { href: '/courses', text: 'Explorar Cursos' }
                           ]
                 ) }}
