--- a/src/Views/teacher/courses/index.twig
+++ b/src/Views/teacher/courses/index.twig
@@ -36,7 +36,7 @@
         {% endfor %}
       {% else %}
         <div class="no-courses">
-          <img src="/assets/img/empty-courses.svg" alt="Nenhum curso criado" class="no-courses-img" />
+          <img src="/assets/images/empty-courses.png" alt="Nenhum curso disponível" style="width: 150px; margin: 0 auto; display: block;">
           <p>Você ainda não criou nenhum curso.</p>
           <a href="/teacher/courses/create" class="btn btn-primary mt-2">
             <i class="fas fa-plus-circle"></i> Criar primeiro curso
